src/objects/UM_MinervaConnection__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>minerva connection</description>
    <fields>
        <fullName>Authentication_Token__c</fullName>
        <label>Authentication Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_URL__c</fullName>
        <label>Connection URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Session_Timeout__c</fullName>
        <label>Session Timeout</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Letter_Preference__c</fullName>
        <label>System Letter Preference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Email_Address__c</fullName>
        <description>Email Address for customer details</description>
        <label>UM Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>UM_No_of_Tries__c</fullName>
        <description>no of tries allowed in orch custom step</description>
        <label>No of Tries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MinervaConnection</label>
</CustomObject>